--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.mainBody {
+    min-width: 1000px;
+    background-color: darkorange;
+    color: #272932;
+}
